Further tweaks/fixes on UI pane resize code. Also switched scrollbar for content from extreme right of window to immediately to the right of the content itself.

--- a/src/main/webapp/nooblab.css
+++ b/src/main/webapp/nooblab.css
@@ -263,7 +263,11 @@ div.precodepaste div.linenos, div.prenopaste div.linenos {
     margin: 0px;
     font-family: Verdana, sans-serif;
     font-size: 90%;
-    min-height: 100%;
+    /* min-height: 100%; */
+    bottom : 0px;
+    overflow : auto;
+    overflow-y : auto;
+    overflow-x : hidden;
 }
 
 /*
@@ -353,7 +357,7 @@ img#nooblabemo {
     cursor : pointer;
     cursor : hand;
     font-weight : bold;
-    position : fixed; bottom : 0; right : 583px; border: 1px solid black;
+    position : fixed; bottom : 0; right : 580px; border: 1px solid black;
 }
 
 
@@ -637,7 +641,7 @@ div#output-outer { display : none }
     ColorBox Core Style:
     The following CSS is consistent between example themes and should not be altered.
 */
-#colorbox, #cboxOverlay, #cboxWrapper{position:absolute; top:0; left:0; z-index:9999; overflow:hidden;}
+#colorbox, #cboxOverlay, #cboxWrapper{position:absolute; top:0; left:0; z-index:30000; overflow:hidden;}
 #cboxOverlay{position:fixed; width:100%; height:100%;}
 #cboxMiddleLeft, #cboxBottomLeft{clear:left;}
 #cboxContent{position:relative;}
